# Luma-

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  memory.rs
src-tauri/src/llm/: client.rs  mod.rs  stream.rs
src-tauri/src/tutor/: academic.rs  casual.rs  mod.rs  prompt.rs
src-tauri/src/tutor/language/: japanese.rs  mod.rs
src/components/: ChatInput.tsx  ChatWindow.tsx  GameCard.tsx  LearnerBadge.tsx  Onboarding.tsx  Settings.tsx  SettingsPannel.tsx
src/components/chat/: ChatInput.tsx  ChatWindow.tsx
src/components/layout/: AppShell.tsx  GameShell.tsx
src/components/tutor/: ConfirmDialog.tsx  LearnerSetupModal.tsx  TutorModeSelector.tsx
src/components/ui/: select.tsx
src/config/: games.ts  languages.ts
src/hooks/: useLlm.ts
src/lib/: llmAbortController.ts  parseLlmJson.ts  utils.ts
src/lib/prompts/: anki.ts  phraseBuilder.ts  scenario.ts
src/screens/: HomeScreen.tsx  SetupScreen.tsx
src/screens/games/AnkiGame/: CardView.tsx  ResultScreen.tsx  TopicInput.tsx  index.tsx
src/screens/games/PhraseBuilderGame/: ChoiceButtons.tsx  PhraseDisplay.tsx  index.tsx
src/screens/games/ScenarioGame/: DialogView.tsx  DialogueView.tsx  ScenarioInput.tsx  index.tsx
src/store/: useLearnerStore.ts
src/types/: app.ts  game.ts  learner.ts  llm.ts  tutor.ts
