[package]
name = "luma"
version = "0.1.0"
description = "Luma — AI-powered language learning desktop app"
authors = ["Luma Dev"]
edition = "2021"

[lib]
name = "luma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri            = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
reqwest          = { version = "0.12", features = ["blocking", "json"] }